// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rotate180 render with transformation 1`] = `
<div>
  <div
    class="flex-1 box-border [:where(&)_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <div
      class="transition-transform duration-150 ease-in rotate-180"
    >
      Rotating component
    </div>
  </div>
</div>
`;

exports[`Rotate180 render without transformation 1`] = `
<div>
  <div
    class="flex-1 box-border [:where(&)_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <div
      class="transition-transform duration-150 ease-in"
    >
      Rotating component
    </div>
  </div>
</div>
`;
